--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
       misc styles, nothing to do with CSS variables
     */
     :root {
+      --base: yellow;
       --spacing: 10px;
       --blur: 10px;
-      --base: yellow;
-    }
-
-    .hl {
-      color: var(--base);
     }
 
     img {
       padding: var(--spacing);
       background: var(--base);
       filter: blur(var(--blur));
+    }
+
+    .hl {
+      color: var(--base);
     }
 
     body {
@@ -64,12 +64,12 @@
   <script>
     const inputs = document.querySelectorAll('.controls input');
 
-    function handleChange() {
+    function handleUpdate() {
       const suffix = this.dataset.sizing || '';
-      document.documentElement.style.setProperty(`--${(this.name)}`, this.value + suffix);
-    }
-    inputs.forEach(input => input.addEventListener('change', handleChange));
-    inputs.forEach(input => input.addEventListener('mousemove', handleChange));
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+    };
+    inputs.forEach(input => input.addEventListener('change', handleUpdate));
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
   </script>
 
 </body>
